--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ email: tobi.zengerle@gmail.com
 twitter_username: lorem_ipsum
 github_username:  zengerleTo
 gplus_username:  lorem_ipsum
+photo: /assets/img/Bewerbungsfoto.jpg
 
 # Google-analytics
 google-analytics:
