--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ nav_exclude:                                            # The following paths ar
   - pages/404.html
   - pages/index.md
   - pages/blog.html
-  - pages/lin-vr.md
+  - pages/lin_vr.md
 
 
 ### Author Info ###
