--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ nav_exclude:                                            # The following paths ar
   - pages/404.html
   - pages/index.md
   - pages/blog.html
+  - pages/projects.html
   - pages/lin_vr.md
 
 
