--- a/_config.yml
+++ b/_config.yml
@@ -29,22 +29,22 @@ nav_exclude:                                            # The following paths ar
 author:
   name              : Tobias Zengerle
   image             : /images/Bewerbungsfoto.jpg
-  behance           : your_username
+# behance           : your_username
 # dribbble          : your_username
   email             : tobi.zengerle@gmail.com
-  facebook          : your_username
+# facebook          : your_username
   github            : zengerleTo
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
   linkedin          : tobiaszengerle
-  medium            : your_username
+# medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
-  twitter           : your_username
+# twitter           : your_username
 # vimeo             : your_username
 # youtube           : your_channel_name
 # keybase           : your_username
